# Uitbrekers-scraper

./: .gitignore  README.md  railway.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  config.ts
frontend/src/components/: CallMode.tsx  FilterPanel.tsx  LeadsTable.tsx  Login.tsx  ScrapeForm.tsx
frontend/src/hooks/: useLeads.ts  useScrape.ts
frontend/src/types/: lead.ts
leadscraper/: .env.example  pyproject.toml  requirements.txt
leadscraper/src/: __init__.py  main.py
leadscraper/src/api/: routes.py  schemas.py
leadscraper/src/config/: __init__.py  prompts.py  settings.py
leadscraper/src/models/: __init__.py  lead.py
leadscraper/src/services/: __init__.py  google_maps.py  lead_store.py  pitch_generator.py  website_crawler.py
